# RAG_ChatBot_QA

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
documents/: Sonnets_William_Shakespeare.txt
src/: embeddings.py  llm.py
