[project]
name = "rag-pdf-chatbot-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10,<2.0",
    "langchain>=0.3,<1.0",
    "langchain-community>=0.3,<1.0",
    "langchain-core>=0.3.78,<1.0",
    "langchain-groq>=0.2,<1.0",
    "langchain-huggingface>=0.3,<1.0",
    "pypdf>=5.0,<6.0",
    "python-docx>=0.8,<1.0",
    "python-dotenv>=1.0,<2.0",
    "rank-bm25>=0.2,<1.0",
    "sentence-transformers>=3.0,<4.0",
    "streamlit>=1.43,<2.0",
]
